--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "pg": "^8.7.1",
